# PyDead-BIB

./: .gitignore  ARCHITECTURE_PyDead-BIB.md  Cargo.toml  IMPROVEMENTS_REPORT.md  LICENSE  README.md  datos.md  errors.txt  fix_imports.py  fix_syntax.py  guias.md  hello.py  output.txt  reportes.md  stdout.txt  test_simple.py
EXTENSION/: ARQUITECTURA.md
FFI GPU/: README.md
Metal_Dead/: README.md  __init__.py  __main__.py
Python_base/: __init__.py  run_all.py
problem/: REPORT.md  test_comprehensions.py  test_str_v45.py
pyb_ai/: context.py  ia_personal.py  intelligence.py  main.py  memory.py  metal_dead.py  model.py  ollama_bridge.py  tokenizer.py
python/: IA_PERSONAL_README.md  adead_ffi.py  ai_complete.py  ai_scalable.py  benchmark_gpu.py  benchmark_server_load.py  demo_full.py  demo_gpu_comparison.py  embeddings.npz  embeddings.py  gpu_detect.py  hybrid_compute.py  ia_personal.py  ia_personal_adead.py  ia_personal_chat.py  ollama_gpu_benchmark.py  ollama_integration.py  vocab_10k.json  vocabulary.py
tests/: test_arithmetic.py  test_async.py  test_builtins.py  test_builtins2.py  test_class_v2.py  test_classes.py  test_ctypes.py  test_dataclass.py  test_decorators.py  test_dict.py  test_dict_str_keys_v46.py  test_dict_v45.py  test_exceptions.py  test_float.py  test_fstring.py  test_functions.py  test_generators.py  test_generators_v2.py  test_globals.py  test_gpu_dispatch.py  test_hello.py  test_hello_real.py  test_if.py  test_import.py  test_inheritance.py  test_inheritance_v2.py  test_jit.py  test_json.py  test_list.py  test_list_iter_v46.py  test_loops.py  (+21 more)
(+396 files in other folders)
